# FFmpegDemo

./: README.md  settings.gradle
SmallVideoLib2/: CMakeLists.txt  build.gradle
SmallVideoLib2/src/main/java/com/mabeijianxi/smallvideorecord2/jniinterface/: FFmpegBridge.java
SmallVideoLib2/src/main/res/values/: strings.xml
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ruanchao/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c
app/src/main/java/com/ruanchao/ffmpegdemo/: MainActivity.java  MainActivity111.java  SynActivity.java  TestActivity.java
app/src/main/java/com/ruanchao/ffmpegdemo/utils/: FFmpegCommands.java  FFmpegUtil.java  FileUtils.java  MediaHelper.java  PermissionsManager.java
app/src/main/res/layout/: activity_main.xml  activity_syn.xml  activity_test.xml
demo/: build.gradle
demo/src/androidTest/java/com/ruanchao/demo/: ExampleInstrumentedTest.java
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/ruanchao/demo/: MainActivity.java
demo/src/main/java/com/ruanchao/demo/event/: FinishVideoMsgEvent.java
demo/src/main/java/com/ruanchao/demo/utils/: FileUtil.java
demo/src/main/java/com/ruanchao/demo/videorecord/: Constans.java  FinishSmallVideoActivity.java  VideoAdapter.java  VideoInfo.java  VideoPlayActivity.java
demo/src/main/res/layout/: activity_main.xml  activity_video_play.xml  activity_video_player.xml  live_video_item_layout.xml  smallvideo_text_edit_activity.xml
demo/src/main/res/values/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
